[gd_scene load_steps=26 format=3 uid="uid://cesp8xbn0fvnx"]

[ext_resource type="Script" uid="uid://cujmkd7d5hao1" path="res://scenes/Characters/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://c532unsw2rpsd" path="res://textures/Placeholder.jpg" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://p55t88r54536" path="res://scenes/Components/gun.tscn" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bxjhk01ij88s7" path="res://textures/player-sprites/player-idle.png" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://dujll6kfjlqtu" path="res://textures/player-sprites/player-jump.png" id="5_tuyoq"]
[ext_resource type="Texture2D" uid="uid://cr5gxtc6s1q2h" path="res://textures/player-sprites/player-run.png" id="6_fjrip"]
[ext_resource type="PackedScene" uid="uid://cr4yx7hsy8g63" path="res://scenes/Components/pause_menu.tscn" id="7_smehm"]
[ext_resource type="PackedScene" uid="uid://d373lh2hft810" path="res://scenes/Components/options_menu.tscn" id="8_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bqbudpl4pyr10" path="res://scenes/Components/controls_menu.tscn" id="9_ur7pv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(42, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("4_dqkch")
region = Rect2(0, 14, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("4_dqkch")
region = Rect2(48, 14, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("4_dqkch")
region = Rect2(96, 14, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("4_dqkch")
region = Rect2(144, 14, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_tuyoq")
region = Rect2(0, 12, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("5_tuyoq")
region = Rect2(48, 12, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("5_tuyoq")
region = Rect2(96, 12, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_tuyoq")
region = Rect2(144, 12, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("6_fjrip")
region = Rect2(0, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("6_fjrip")
region = Rect2(48, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("6_fjrip")
region = Rect2(96, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("6_fjrip")
region = Rect2(144, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("6_fjrip")
region = Rect2(192, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("6_fjrip")
region = Rect2(240, 16, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Player2" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 2
script = ExtResource("1_g2els")
metadata/_edit_vertical_guides_ = [1225.0]

[node name="PlayerTexture" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.536743e-07, 1.9073486e-06)
scale = Vector2(1.6800001, 5.12)
texture = ExtResource("2_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g2els")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, 1)
scale = Vector2(3.8, 3.8)
sprite_frames = SubResource("SpriteFrames_ur7pv")
animation = &"jump"
frame_progress = 0.22007807

[node name="Gun" parent="." instance=ExtResource("3_qhqgy")]
position = Vector2(-15, -14)

[node name="PauseMenu" parent="." instance=ExtResource("7_smehm")]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource("8_ur7pv")]
visible = false

[node name="ControlsMenu" parent="." instance=ExtResource("9_ur7pv")]
visible = false

[connection signal="options" from="PauseMenu" to="." method="_on_pause_menu_options"]
[connection signal="back" from="OptionsMenu" to="." method="_on_options_menu_back"]
[connection signal="controls" from="OptionsMenu" to="." method="_on_options_menu_controls"]
[connection signal="back" from="ControlsMenu" to="." method="_on_controls_menu_back"]
